# marlin

./: .gitignore  .prettierignore  AGENTS.md  ALTERNATIVE_DRAG_SOLUTION.md  CLAUDE.md  DRAG_DETECTOR_PLUGIN.md  DRAG_DROP_IMPLEMENTATION.md  DRAG_DROP_STATUS.md  README.md  ROADMAP.md  TEST-README.md  TRUNCATION_ANALYSIS.md  eslint.config.cjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/skills/git-rebase/references/: conflict-analysis.md  ours-vs-theirs.md
.claude/skills/git-rebase/scripts/: rebase-context.sh
.github/: .cache-test  dependabot.yml
.github/workflows/: apt-repo.yml  check.yml  claude-code-review.yml  claude.yml  e2e-tests.yml  release.yml  sync-version.yml  update-homebrew-cask.yml
docs/: APPLE_SIGNING_GUIDE.md  location-providers.md
docs/plans/: 2025-12-09-google-drive-integration-design.md  2026-01-12-large-directory-performance-design.md  2026-01-12-type-to-filter.md  2026-01-14-gdrive-url-paste.md  2026-01-14-smb-dimensions-investigation.md  2026-01-14-smb-implementation-plan.md  2026-01-14-smb-support-design.md
e2e/: dimensions.spec.ts  drop-same-directory.spec.ts  filter.spec.ts  gdrive.spec.ts  navigation.spec.ts  performance.spec.ts  preferences.spec.ts  smoke.spec.ts  stability.spec.ts  tauri-gdrive.spec.ts  tauri-mocks.ts  thumbnail-cache.spec.ts  toast.spec.ts  undo.spec.ts
e2e-wdio/: gdrive.spec.ts
scripts/: install-local.mjs  install.mjs  install.sh  run-lint-if-needed.mjs  run-tauri.mjs
src/: App.tsx  App.tsx.orig  index.css  main.tsx  test-setup.ts
src-tauri/: .env.example  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  drag.rs  fs_utils.rs  fs_watcher.rs  lib.rs  macos_icons.rs  macos_security.rs  menu.rs  native_drag.rs  state.rs
src-tauri/src/locations/: file.rs  mod.rs
src-tauri/src/locations/archive/: cache.rs  mod.rs  reader.rs
src-tauri/src/locations/gdrive/: auth.rs  mod.rs  provider.rs  tests.rs  url_parser.rs
src-tauri/src/locations/sftp/: auth.rs  mod.rs  pool.rs
src-tauri/src/locations/smb/: auth.rs  client.rs  mod.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/drag_detector/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/smb_sidecar/: mod.rs  operations.rs  protocol.rs
src-tauri/src/thumbnails/: cache.rs  mod.rs  worker.rs
src-tauri/src/thumbnails/generators/: apps.rs  fonts.rs  images.rs  mod.rs  pdf.rs  psd.rs  sftp.rs  smb.rs  stl.rs  svg.rs  video.rs  zpl.rs
src-tauri/tests/: gdrive_integration_test.rs  smb_integration.rs
src/__tests__/unit/hooks/: useDirectoryWatcher.test.ts
src/__tests__/unit/store/: useAppStore.filter.test.ts  useAppStore.test.ts  useDeleteProgressStore.test.ts
src/__tests__/unit/utils/: pathUtils.test.ts
src/components/: AddSmbServerDialog.tsx  AppIcon.tsx  ContextMenu.tsx  DragDebug.tsx  DragDropTest.tsx  DragPreview.tsx  FileExtensionBadge.tsx  FileGrid.tsx  FileList.tsx  FileNameDisplay.tsx  FileTypeIcon.tsx  FilterInput.tsx  GitRepoBadge.tsx  LanguageIcon.tsx  MainPanel.tsx  PathBar.tsx  PermissionPrompt.tsx  QuickTooltip.tsx  Sidebar.tsx  StatusBar.tsx  SymlinkBadge.tsx  Toast.tsx  UpdateNotice.tsx  ZoomSlider.tsx
src/components/__tests__/: FileNameDisplay.highlight.test.tsx  FilterInput.test.tsx
src/contexts/: ScrollContext.tsx
src/hooks/: useDirectoryStream.ts  useDirectoryWatcher.ts  useDragDetector.ts  useFileAnimations.ts  useFileIcon.tsx  usePlatform.ts  usePrefersReducedMotion.ts  useSortedFiles.ts  useTheme.ts  useThemeRegistry.ts  useThumbnail.ts  useUpdateCheck.ts  useVisibility.ts  useVisualTruncation.ts
src/store/: useAppStore.ts  useArchiveProgressStore.ts  useClipboardProgressStore.ts  useCompressProgressStore.ts  useConflictStore.ts  useDeleteProgressStore.ts  useDragStore.ts  useFolderSizeStore.ts  useToastStore.ts  useUndoStore.ts
src/themes/: README.md  catppuccin.ts  default.ts  dracula.ts  github.ts  gruvbox.ts  index.ts  monokai-pro-octagon.ts  monokai-pro.ts  nord.ts  solarized.ts  synthwave.ts  ubuntu.ts  windows-hotdog.ts  windows-xp.ts
src/types/: index.ts  intl.d.ts  tauri-plugin-macos-permissions-api.d.ts
src/utils/: accent.ts  archiveUri.ts  dragImage.ts  events.ts  fileBrowser.ts  fileTypes.ts  fileUrl.ts  formatBytes.ts  fullDiskAccessPrompt.ts  googleDriveUrl.test.ts  googleDriveUrl.ts  graphemes.ts  gridConstants.ts  iconSizing.ts  multiLineTruncate.ts  pathUtils.ts  smbPath.ts  textMeasure.ts  theme.ts  truncate.ts  zipNaming.test.ts  zipNaming.ts
src/windows/: ArchiveProgressWindow.tsx  ClipboardProgressWindow.tsx  CompressProgressWindow.tsx  ConflictWindow.tsx  DeleteProgressWindow.tsx  FolderSizeWindow.tsx  PermissionsWindow.tsx  PreferencesWindow.tsx  SftpConnectWindow.tsx  SmbConnectWindow.tsx  windowLayout.ts
