[package]
name = "marlin"
version = "0.1.0"
description = "A modern, sleek file browser with native performance"
authors = ["Marlin Team"]
license = "MIT"
repository = "https://github.com/StirlingMarketingGroup/marlin"
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
cargo-clippy = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2.3.1"
tauri-plugin-fs = "2.3.1"  
tauri-plugin-os = "2.3.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-dialog = "2.3.1"
tauri-plugin-drag = "2.1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
tokio = { version = "1.0", features = ["full"] }
cocoa = { version = "0.26", optional = true }
objc = { version = "0.2", optional = true }
base64 = "0.22"
# Thumbnail system dependencies
image = { version = "0.25", features = ["png", "jpeg", "webp", "gif"] }
lru = "0.16"
dashmap = "6.1"
rayon = "1.10"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
urlencoding = "2.1"
webp = { version = "0.3", optional = true }
once_cell = "1.19"
num_cpus = "1.16"
mupdf = { version = "0.5", default-features = false, features = [] }
resvg = { version = "0.45", default-features = true }
usvg = { version = "0.45", default-features = true, features = ["text"] }
# File system watching
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.25" }
objc = { version = "0.2" }
block = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }
