[package]
name = "marlin"
version = "0.1.0"
description = "A modern, sleek file browser with native performance"
authors = ["Marlin Team"]
license = "MIT"
repository = "https://github.com/StirlingMarketingGroup/marlin"
edition = "2021"
rust-version = "1.77.2"

[features]
default = []
cargo-clippy = []
# SMB support requires libsmbclient: brew install samba (macOS) or apt install libsmbclient-dev (Linux)
smb = ["pavao"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.3", features = [] }
tauri-plugin-log = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-drag = "2.1.0"
tauri-plugin-opener = "2.5.2"
git2 = { version = "0.20", default-features = false, features = ["https", "vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
tokio = { version = "1.0", features = ["full"] }
cocoa = { version = "0.26", optional = true }
objc = { version = "0.2", optional = true }
base64 = "0.22"
# Thumbnail system dependencies
image = { version = "0.25", features = ["png", "jpeg", "webp", "gif"] }
lru = "0.16"
dashmap = "6.1"
rayon = "1.10"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
urlencoding = "2.1"
url = "2.5"
webp = { version = "0.3", optional = true }
once_cell = "1.19"
num_cpus = "1.16"
mupdf = { version = "0.5", default-features = false, features = [] }
resvg = { version = "0.46", default-features = true }
usvg = { version = "0.46", default-features = true, features = ["text"] }
ffmpeg-sidecar = "2.2"
# File system watching
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
walkdir = "2.5"
libc = "0.2"
zip = { version = "7.0", default-features = false, features = ["deflate", "bzip2", "zstd"] }
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.6"
xz2 = { version = "0.1", features = ["static"] }
zstd = "0.13"
async-trait = "0.1"
trash = "5.2.5"

# Google Drive integration
google-drive3 = "5"
yup-oauth2 = "11"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http2"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5"
bytes = "1"
mime_guess = "2.0.5"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.25" }
objc = { version = "0.2" }
block = "0.1"
tauri-plugin-macos-permissions = "2.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", package = "gtk" }

# SMB support (macOS/Linux only - Windows uses native UNC paths)
# Enable with: cargo build --features smb
# Requires: brew install samba (macOS) or apt install libsmbclient-dev (Linux)
[target.'cfg(not(target_os = "windows"))'.dependencies]
pavao = { version = "0.2", optional = true }
