[package]
name = "marlin"
version = "0.1.0"
description = "A modern, sleek file browser with native performance"
authors = ["Marlin Team"]
license = "MIT"
repository = "https://github.com/StirlingMarketingGroup/marlin"
edition = "2021"
rust-version = "1.77.2"
default-run = "marlin"

[features]
default = []
cargo-clippy = []
# SMB sidecar binary - compiled separately with libsmbclient
# Build with: cargo build --bin marlin-smb --features smb-sidecar
smb-sidecar = ["pavao"]
# Legacy feature (deprecated) - kept for compatibility but does nothing
smb = []

# SMB sidecar binary entry point
[[bin]]
name = "marlin-smb"
path = "src/bin/marlin-smb.rs"
required-features = ["smb-sidecar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
dotenvy = "0.15"
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = [] }
tauri-plugin-log = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-drag = "2.1.0"
tauri-plugin-opener = "2.5.2"
git2 = { version = "0.20", default-features = false, features = ["https", "vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
# Thumbnail system dependencies
image = { version = "0.25", features = ["png", "jpeg", "webp", "gif"] }
lru = "0.16"
dashmap = "6.1"
rayon = "1.10"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
urlencoding = "2.1"
url = "2.5"
webp = { version = "0.3", optional = true }
once_cell = "1.19"
num_cpus = "1.16"
mupdf = { version = "0.6", default-features = false, features = [] }
resvg = { version = "0.47", default-features = true }
usvg = { version = "0.46", default-features = true, features = ["text"] }
ffmpeg-sidecar = "2.2"
psd = "0.3"
# File system watching
notify = { version = "8.2", default-features = false, features = ["macos_fsevent"] }
walkdir = "2.5"
libc = "0.2"
zip = { version = "7.4", default-features = false, features = ["deflate", "bzip2", "zstd"] }
unrar = "0.5"
tar = "0.4"
flate2 = "1.1"
bzip2 = "0.6"
xz2 = { version = "0.1", features = ["static"] }
zstd = "0.13"
filetime = "0.2"
ab_glyph = "0.2"
async-trait = "0.1"
trash = "5.2.5"
zpl-rs = "0.1"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust", "vendored"] }

# SFTP integration (russh 0.57 includes keys module, no separate russh-keys needed)
russh = "0.57"
russh-sftp = "2.1"

# Google Drive integration
google-drive3 = "7"
yup-oauth2 = "12"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", features = ["http2"] }
reqwest = { version = "0.13", features = ["json", "form"] }
open = "5"
bytes = "1"
mime_guess = "2.0.5"
rustls = { version = "0.23.32", features = ["ring"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-app-kit = "0.3.2"
block = "0.1"
tauri-plugin-macos-permissions = "2.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_Foundation", "Win32_UI_Shell"] }
clipboard-win = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", package = "gtk" }

# SMB support (macOS/Linux only - Windows uses native UNC paths)
# Enable with: cargo build --features smb
# Requires: brew install samba (macOS) or apt install libsmbclient-dev (Linux)
[target.'cfg(not(target_os = "windows"))'.dependencies]
pavao = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.16"
